--- a/tests/fixtures/rules/no-exports-from-components/valid/exceptions-03-input.astro
+++ b/tests/fixtures/rules/no-exports-from-components/valid/exceptions-03-input.astro
@@ -1,9 +1,13 @@
 ---
 // This file is used to test the exceptions for the `no-exports-from-components` rule.
 // The following exports are allowed as exceptions.
-export const getStaticPath = () => {
+const getStaticPath = (): { param: unknown }[] => {
   // logic here
+  return []
 }
-export const prerender = true;
+const prerender = true
+
+export { getStaticPath, prerender }
 ---
+
 <div>Hello World</div>
