fix: no-exports-from-components rule, which allowed `getStaticPath` instead of `getStaticPaths`

--- a/tests/fixtures/rules/no-exports-from-components/valid/exceptions-01-input.astro
+++ b/tests/fixtures/rules/no-exports-from-components/valid/exceptions-01-input.astro
@@ -1,7 +1,7 @@
 ---
 // This file is used to test the exceptions for the `no-exports-from-components` rule.
 // The following exports are allowed as exceptions.
-export const getStaticPath = (): { param: unknown }[] => {
+export const getStaticPaths = (): { param: unknown }[] => {
   // logic here
   return [{ param: "value" }]
 }
