--- a/tests/fixtures/rules/no-exports-from-components/valid/exceptions-03-input.astro
+++ b/tests/fixtures/rules/no-exports-from-components/valid/exceptions-03-input.astro
@@ -1,13 +1,13 @@
 ---
 // This file is used to test the exceptions for the `no-exports-from-components` rule.
 // The following exports are allowed as exceptions.
-const getStaticPath = (): { param: unknown }[] => {
+const getStaticPaths = (): { param: unknown }[] => {
   // logic here
   return []
 }
 const prerender = true
 
-export { getStaticPath, prerender }
+export { getStaticPaths, prerender }
 ---
 
 <div>Hello World</div>
