--- a/tests/fixtures/rules/no-exports-from-components/valid/exceptions-02-input.astro
+++ b/tests/fixtures/rules/no-exports-from-components/valid/exceptions-02-input.astro
@@ -1,6 +1,6 @@
 ---
 // This file is used to test the exception for the `getStaticPath` function in the `no-exports-from-components` rule.
-export async function getStaticPath(): Promise<{ param: unknown }[]> {
+export async function getStaticPaths(): Promise<{ param: unknown }[]> {
   // logic here
   return []
 }
