no-export-from-components - allow "partial" exception

--- a/tests/fixtures/rules/no-exports-from-components/valid/exceptions-01-input.astro
+++ b/tests/fixtures/rules/no-exports-from-components/valid/exceptions-01-input.astro
@@ -5,6 +5,7 @@ export const getStaticPaths = (): { param: unknown }[] => {
   // logic here
   return [{ param: "value" }]
 }
+export const partial = true
 export const prerender = true
 ---
 
